force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__ACBalAccountID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A/C BAL Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FMS BILL+A/C BAL</relationshipLabel>
    <relationshipName>ACBalAccountID</relationshipName>
    <type>Lookup</type>
</CustomField>