force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__ACBalanceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalanceID__c</fullName>
    <label>A/C BALANCE ID</label>
    <referenceTo>clofor_com_cfs__ACBalance__c</referenceTo>
    <relationshipLabel>FMS BILL+A/C BAL</relationshipLabel>
    <relationshipName>FMSBillACBalID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>