force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__ACBalEndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalEndDate__c</fullName>
    <label>A/C BAL END DATE</label>
    <type>Date</type>
</CustomField>