force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__AccountedDateFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountedDateFormu__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__SalesAccountedDateInvoicing__c</formula>
    <label>ACCOUNTED DATE-FORMU</label>
    <type>Date</type>
</CustomField>