force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__AmountOfTaxSellingUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfTaxSellingUSDFormu__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__SellTaxNum_USD__c</formula>
    <label>AMOUNT OF TAX-SELLING(USD)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>