force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__FMSBillID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FMSBillID__c</fullName>
    <label>FMS BILL ID</label>
    <referenceTo>clofor_com_cfs__AnkenMeisai__c</referenceTo>
    <relationshipLabel>FMS BILL+A/C BAL</relationshipLabel>
    <relationshipName>FmsBillACBal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>