force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__InvoiceToFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InvoiceToFormu__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__Seikyusaki__r.Name</formula>
    <label>INVOICE TO-FORMU</label>
    <type>Text</type>
</CustomField>