force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__PaymentToFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentToFormu__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__PaymentTo__r.Name</formula>
    <label>PAYMENT TO-FORMU</label>
    <type>Text</type>
</CustomField>