force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__TotalAmountOfBuyingLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfBuyingLocalFormu__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__BuyAmountJPN__c</formula>
    <label>TOTAL AMOUNT OF BUYING(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>