force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__TotalAmountOfBuyingUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfBuyingUSDFormu__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__BuyAmountUSD__c</formula>
    <label>TOTAL AMOUNT OF BUYING(USD)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>