force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__TotalAmountOfSellingUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfSellingUSDFormu__c</fullName>
    <label>TOTAL AMOUNT OF SELLING(USD)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>