force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__UnpaidBalanceOfBuyingLocalACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceOfBuyingLocalACBal__c</fullName>
    <label>UNPAID BAL OF BUYING(LOCAL)-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>