force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__UnpaidBalanceOfBuyingLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceOfBuyingLocalFormula__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__BuyDifferentiation__c</formula>
    <label>UNPAID BAL OF BUYING(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>