force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__UnreceivedBalanceOfSellingUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceivedBalanceOfSellingUSDACBal__c</fullName>
    <label>UNRECEIVED BAL OF SELLING(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>