force-app/main/default/objects/clofor_com_cfs__FMSBillACBal__c/fields/clofor_com_cfs__UnreceivedBalanceOfSellingUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceivedBalanceOfSellingUSDFormula__c</fullName>
    <formula>clofor_com_cfs__FMSBillID__r.clofor_com_cfs__UNPAID_BALANCE_OF_SELLING_USD__c</formula>
    <label>UNRECEIVED BAL OF SELLING(USD)-FORMULA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>